# mandelbrot

./: .gitignore  Cargo.toml  README.md  index.html  main.js  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy.yml
.kiro/specs/mandelbrot-wasm-renderer/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/spa-github-pages-deployment/: design.md  gap-analysis.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
src/: color.rs  core.rs  lib.rs  renderer.rs  viewport.rs
